Add more tests and update http endpoints
